<resources>
    <string name="app_name">PathFinderPlus</string>
    <string name="email">אמייל</string>
    <string name="password">סיסמה</string>
    <string name="login">כניסה</string>
    <string name="new_list">New List</string>
    <string name="existing_list">existing list</string>
    <string name="sign_up">משתמש חדש</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_data_available">No data available</string>
    <string name="title_activity_lat_lng_adapter">LatLngAdapter</string>
    <string name="confirm_password">אמת סיסמה</string>
    <string name="enter">כניסה</string>
    <string name="reset_password">איפוס סיסמה</string>
    <string name="enter_your_email">אימייל</string>
    <string name="forgot_password">שכחתי סיסמה</string>
    <string name="enter_an_address">הכנס כתובת</string>
    <string name="add_address">הוסף כתובת</string>
    <string name="careate_path">צור מסלול</string>
    <string name="history">להיסטוריה</string>
    <string name="title">Please select the time</string>
    <string name="selected_time_prefix">Your selected time is</string>

    <!-- %1$s:%2$s will add the string in HH:MM format
    for more understanding follow the link at the end -->
    <string name="selected_time_format">%1$s:%2$s</string>

    <!-- >> means >> for more understanding follow
    the link at the end -->
    <string name="time_prefix">>></string>
    <string name="title_help">ברוך הבא לאפליקצית "+Path Finder",
האפליקציה שתעזור לך לתכנן את המסלול שלך ולהגיע לכל יעדיך בצורה המהירה והמיטבית!
תוכל להזין את רשימת היעדים אליהם הינך מעוניין להגיע, להוסיף אילוצי זמן ומקום, ולנווט בבטחה ובמהירות במסלול הקצר ביותר עפ"י דרישותיך.
</string>
    <string name="explanations">קצת הסברים:</string>
    <string name="search">בשדה זה עליך להזין את הכתובת אליה אתה מעוניין להגיע. (אל דאגה, אנחנו נעזור לך… עליך רק להזין את תחילת הכתובת ולבחור אותה מתוך הרשימה שתיפתח לך)\n</string>
    <string name="time">"במידה והינך מעוניין לאלץ הגעה לכתובת לפני שעה מסוימת, תוכל ללחוץ על אייקון זה. בלחיצה עליו, תיפתח לך האפשרות לבחירת שעה מדויקת. בלחיצה על האישור האילוץ יוצמד לכתובת והמסלול שתקבל יהיה בכפוף אליו. "</string>
    <string name="path">במידה והינך מעוניין לאלץ הגעה לתחנה מסוימת לפני תחנה אחרת, תוכל ללחוץ על אייקון זה. בלחיצה עליו, תיפתח לך רשימת התחנות המלאה שהזנת לבחירת תחנה לאילוץ. משמעות הבחירה היא שהינך מעוניין להגיע לתחנה הנוכחית לפני התחנה שבחרת. בלחיצה על התחנה המבוקשת האילוץ יוצמד לכתובת והמסלול שתקבל יהיה בכפוף אליו.</string>
    <string name="careate_path_text">לאחר שהזנת את הרשימה המלאה של  התחנות שאליהן אתה מעוניין להגיע והצמדת אליהן אילוצים כרצונך, עליך ללחוץ על כפתור זה. בלחיצה על הכפתור, תופיע לך האפשרות לבחור האם לשמור את המסלול בהיסטורית המסלולים לך או לא, והניווט יתחיל… בהצלחה!!</string>
    <string name="history_text">במידה והינך מעוניין לנווט למסלול אליו כבר ניווטת בעבר ושמרת אותו בהיסטורית המסלולים שלך, לחץ על האייקון. לחיצה עליו תעביר אותך למסך ההיסטוריה. (תוכל לבחור מסלול מההיסטוריה ולאחר מכן לשנות אותו כרצונך. שים לב, האילוצים שהזנת בעבר לא נשמרים ולכן עליך להזין אותם מחדש)\n</string>
    <string name="choose_text">לחץ על האייקון ע\"מ לבחור את המסלול הזה לניווט.</string>
    <string name="delete_text">לחץ על האייקון ע\"מ למחוק את המסלול מהיסטורית המסלולים שלך.</string>
    <string name="home_text">לחץ על האייקון במידה ואינך מעוניין לבחור מסלול מההיסטוריה אלא להזין מסלול חדש כרצונך. לחיצה על האייקון תעביר אותך בחזרה למסך הבית.\n</string>
    <string name="ok">הבנתי</string>
    <string name="add_address_text">לאחר שבחרת את הכתובת מוך הרשימה, עליך ללחוץ על כפתור זה כדי להוסיף אותו לרשימת היעדים המבוקשים. בלחיצה על הכפתור שדה החיפוש יתנקה ותוכל להזין שם כתובת חדשה. שים לב: כל כתובת שתזין תתווסף לרשימה רק עם לחיצה על \"הוסף כתובת\".</string>

    <!-- << means << for more understanding follow
    the link at the end -->
<!--
    <string name="time_suffix"><<</string>
-->

</resources>