<!-- custom_sign_up_dialog.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_red_dark"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_red_dark"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_red_dark"
        android:padding="12dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/enterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="24dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@android:color/white"/>
</LinearLayout>
